create-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-deployment1
spec:
    replicas: 3
    selector:
      matchLabels:
        app: http
    template:
      metadata:
        labels:
          app: http
      spec:
        containers:
        - name: call
          image: my-http1
          imagePullPolicy: IfNotPresent
          command: [ "/main" ]
          ports:
          - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-deployment2
spec:
    replicas: 3
    selector:
      matchLabels:
        app: http2
    template:
      metadata:
        labels:
          app: http2
      spec:
        containers:
        - name: call2
          image: my-http2
          imagePullPolicy: IfNotPresent
          command: [ "/main" ]
          ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: http-deployment1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: http
  type: NodePort
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: http-deployment2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: http2
  type: NodePort
status:
  loadBalancer: {}
