sql-server.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: geocachefriends
  name: geocachefriends
spec:
  containers:
  - image: mcr.microsoft.com/mssql/server
    name: geocachefriends
    ports:
    - containerPort: 1433
      name: geocachefriends
---
apiVersion: v1
kind: Service
metadata:
   name: geocachefriends
spec:
  type: NodePort
  ports:
  - port: 1433 
    nodePort: 31433
  selector:
    run: geocachefriends
